--- a/portfolio/public/LOGIN.html
+++ b/portfolio/public/LOGIN.html
@@ -38,11 +38,10 @@
 <body>
    <div> 
     <div id="warp">
-        <img src="../Design/로그인이미지.jpg" alt="로그인페이지" usemap="#workmap">
+        <img src="../Design/login_image.png" alt="로그인페이지" usemap="#workmap">
         <map name="workmap">
             <area shape="rect" coords="16px, 5px, 43px, 45px" href="./best.html" alt="베스트로이동">
         </map>
     </div>
-    
 </body>
 </html>
